fix(portfolio): correct timeline spacing by properly ordering last items in HTML and CSS

--- a/sites/portfolio/assets/scss/_resume.scss
+++ b/sites/portfolio/assets/scss/_resume.scss
@@ -38,7 +38,7 @@
             position: relative;
             margin-bottom: 3rem;
 
-            &.last {
+            &:last-child, &.last {
                 margin-bottom: 0;
             }
 
